refactoring position table

--- a/src/app/components/position/add-edit-position-table/add-edit-position-table.component.html
+++ b/src/app/components/position/add-edit-position-table/add-edit-position-table.component.html
@@ -99,7 +99,7 @@
                 ></button>
               } @else {
                 <button
-                  appearance="primary"
+                  appearance="create"
                   icon="tuiIconSave"
                   shape="rounded"
                   size="m"
