--- a/src/app/components/position/add-edit-position-table/add-edit-position-table.component.less
+++ b/src/app/components/position/add-edit-position-table/add-edit-position-table.component.less
@@ -1,3 +1,25 @@
+@import '@taiga-ui/core/styles/taiga-ui-local.less';
+
+td,
+th {
+  white-space: nowrap;
+  border-color: transparent;
+  border-right-color: var(--tui-base-02);
+
+
+  &:last-child {
+    border-right-color: transparent;
+  }
+}
+
+tbody {
+  border-color: transparent;
+}
+
+tr:nth-child(even) td {
+  background: var(--tui-base-03);
+}
+
 .table-cell {
   text-align: center;
   vertical-align: middle;
