player to team added

--- a/src/app/components/position/add-edit-position-table/add-edit-position-table.component.html
+++ b/src/app/components/position/add-edit-position-table/add-edit-position-table.component.html
@@ -64,10 +64,10 @@
                   icon="tuiIconEdit2"
                   shape="rounded"
                   size="m"
-                  title="Save"
+                  title="Edit"
                   tuiIconButton
                   type="button"
-                  class="update"
+                  class="edit"
                   style="padding: 5px"
                   (click)="makeEditable(i)"
                 ></button>
