--- a/src/app/shared/ui/select/select-from-list/select-from-list.component.html
+++ b/src/app/shared/ui/select/select-from-list/select-from-list.component.html
@@ -19,6 +19,7 @@
   >
     <div class="template">
       <tui-avatar
+        *ngIf="avatarProperty !== 'none'"
         size="xs"
         class="avatar"
         [avatarUrl]="backendUrl + data[avatarProperty] || null"
