--- a/src/app/shared/ui/select/select-player-position/select-player-position.component.html
+++ b/src/app/shared/ui/select/select-player-position/select-player-position.component.html
@@ -1,20 +1,26 @@
 <tui-select
-  *tuiLet="positionList as items"
   [formControl]="control"
   style="padding-top: 10px;"
 >
-  <tui-data-list-wrapper
-    *tuiDataList
-    size="l"
-    [itemContent]="content"
-    [items]="items | withNullOption:true"
-  ></tui-data-list-wrapper>
-  <ng-template
-    #content
-    let-data
-  >
-    <div class="template">
-      <div class="name">{{ data.title }}</div>
-    </div>
-  </ng-template>
+  <tui-data-list *tuiDataList>
+    @for (position of positionList; track position.id) {
+      <button
+        tuiOption
+        [value]="position"
+      >
+        {{ position.title }}
+      </button>
+    }
+    <app-add-button-icon
+      [action]="'add'"
+      [item]="'Position'"
+      [buttonSize]="'s'"
+      [dialogId]="'addPositionDialog'+index"
+    ></app-add-button-icon>
+  </tui-data-list>
 </tui-select>
+<app-add-edit-position
+  [action]="'add'"
+  [dialogId]="'addPositionDialog'+index"
+  [sport_Id]="sportId"
+></app-add-edit-position>
