--- a/src/app/components/team/add-edit-team/add-edit-team.component.html
+++ b/src/app/components/team/add-edit-team/add-edit-team.component.html
@@ -11,7 +11,6 @@
     <div class="tui-form__row">
       <tui-input
         formControlName="teamTitle"
-        tuiAutoFocus
       >
         Team Title
 
@@ -27,7 +26,7 @@
       <tui-input
         formControlName="teamCity"
       >
-        Team City
+        City
       </tui-input>
       <tui-error
         formControlName="teamCity"
