refactoring player in team tournament

--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -99,7 +99,7 @@
               type="button"
               class="update"
               style="padding: 5px"
-              (click)="onSubmit($event, 'add', i, id)"
+              (click)="onSubmit($event, 'edit', i, id)"
             ></button>
             <button
               appearance="accent"
@@ -124,7 +124,7 @@
               type="button"
               class="save-new"
               style="padding: 5px"
-              (click)="onSubmit($event, 'edit', i,  null)"
+              (click)="onSubmit($event, 'add', i,  null)"
             ></button>
             <button
               appearance="accent"
